# jqnm

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_matrix.py  pytest-not-slow.yml  pytest-slow.yml
docs/: conf.py  index.rst  requirements.txt
jqnm/: __init__.py  angular.py  cached.py  contfrac.py  nearby.py  radial.py  spinsequence.py
jqnm/schwarzschild/: approx.py  overtonesequence.py  tabulated.py
notebooks/: Comparison-against-Cook-data.ipynb  examples.ipynb
test/: test_comparison_qnm.py  test_jax.py  test_qnm.py
