[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jqnm"
dynamic = ["version"]
description = "JAX-accelerated package for computing Kerr quasinormal mode frequencies with automatic differentiation support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cedric Ewen"}
]
keywords = [
    "black holes",
    "quasinormal modes",
    "physics",
    "scientific computing",
    "numerical methods",
    "jax",
    "gpu",
    "differentiable",
    "gravitational waves"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "optimistix>=0.0.6",
    "equinox>=0.11.0",
    "tqdm",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda11 = ["jax[cuda11]"]
test = ["pytest", "qnm"]
dev = ["pytest", "qnm", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/cedricewen/jqnm"
Repository = "https://github.com/cedricewen/jqnm"
Issues = "https://github.com/cedricewen/jqnm/issues"
"Original Package" = "https://github.com/duetosymmetry/qnm"

[tool.setuptools.dynamic]
version = {attr = "jqnm._version.__version__"}

[tool.setuptools.packages.find]
include = ["jqnm*"]

[tool.setuptools.package-data]
jqnm = ["schwarzschild/data/*", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
